bug fixed : video overflow (#155)

--- a/src/templates/consulting/components/benefits/index.css
+++ b/src/templates/consulting/components/benefits/index.css
@@ -1,6 +1,7 @@
 .container {
     overflow: hidden;
     color: white;
+    min-width: 100%;
     background-attachment: fixed;
     background-image: url('../../../../assets/images/consulting/mvc-benefits-bg.jpg');
     background-position: center;
